# SlugFarm

./: .gitignore  MANIFEST.in  README.md  __main__.py  harvest_result.txt  pyproject.toml  pytest.ini  ruff.toml
src/slug_farm/: __init__.py  base.py  bash_slugs.py  docker_slugs.py  python_slug.py  registries.py  request_slugs.py  udp_slugs.py
tests/: bash_slug_tests.py  conftest.py  in_progress_registry.py  test_bash_slugs.py  test_registry.py  test_request_slugs.py  test_udp_slugs.py
