[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slug_farm"
version = "0.1.0"
description = "A hierarchical, state-inheriting command and request builder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0", 
    "yarl>=1.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools.packages.find]
where = ["src"]